# internal/loadbalancer/server.go
@@ -12,6 +12,7 @@ import (
 	"github.com/computer-technology-team/distributed-kvstore/api/controller"
 	kvstoreAPI "github.com/computer-technology-team/distributed-kvstore/api/kvstore"
 	"github.com/computer-technology-team/distributed-kvstore/api/loadbalancer"
+	openapi_types "github.com/oapi-codegen/runtime/types"
 	"github.com/samber/lo"
 )
 
@@ -50,26 +51,49 @@ func NewServer(ctx context.Context, controllerClient controller.ClientWithRespon
 	return srv, nil
 }
 
-func replicaPredicate(partition *common.Partition) func(common.Node) bool {
-	return func(replica common.Node) bool {
-		return replica.Id == partition.MasterReplicaId
+func replicaPredicate(replicaId openapi_types.UUID) func(common.Node) bool {
+	return func(node common.Node) bool {
+		return node.ReplicaID != nil && *node.ReplicaID == replicaId
 	}
 }
 
-func balanceReplicaIter(replicas []common.Node) iter.Seq[common.Node] {
-	selectedPartitionIdx := rand.IntN(len(replicas))
+func balanceReplicaIter(replicaIds []openapi_types.UUID, nodes []common.Node) iter.Seq[common.Node] {
+	selectedReplicaIdx := rand.IntN(len(replicaIds))
 	return func(yield func(common.Node) bool) {
-		for i := range len(replicas) {
-			idx := (i + selectedPartitionIdx) % len(replicas)
-			if !yield(replicas[idx]) {
-				return
+		for i := range len(replicaIds) {
+			replicaIdx := (i + selectedReplicaIdx) % len(replicaIds)
+			replicaId := replicaIds[replicaIdx]
+			
+			// Find the node with this replica ID
+			for _, node := range nodes {
+				if node.ReplicaID != nil && *node.ReplicaID == replicaId && node.Status == common.Healthy {
+					if !yield(node) {
+						return
+					}
+					break
+				}
 			}
 		}
 	}
 }
 
-func filterHealthyReplica(replicas []common.Node) []common.Node {
-	return lo.Filter(replicas, func(replica common.Node, _ int) bool {
-		return replica.Status == common.Healthy
+func getNodesForReplicaIds(replicaIds []openapi_types.UUID, nodes []common.Node) []common.Node {
+	result := make([]common.Node, 0, len(replicaIds))
+	
+	for _, replicaId := range replicaIds {
+		for _, node := range nodes {
+			if node.ReplicaID != nil && *node.ReplicaID == replicaId {
+				result = append(result, node)
+				break
+			}
+		}
+	}
+	
+	return result
+}
+
+func filterHealthyNodes(nodes []common.Node) []common.Node {
+	return lo.Filter(nodes, func(node common.Node, _ int) bool {
+		return node.Status == common.Healthy
 	})
 }
